--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2267,6 +2267,21 @@ body {
     display: none;
   }
 }
+.cid-rr7t9MGtpv {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-rr7t9MGtpv .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rr7t9MGtpv .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-rr7t9MGtpv .content-row {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
 .cid-rpYEskcaw0 {
   padding-top: 30px;
   padding-bottom: 30px;
